# service.auth

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.deploy.api.yml  ci.deploy.mail.yml  ci.deploy.web.yml  ci.guard.yml
.task/: MAIN.md  PHASE_1.1.md  PHASE_1.2.md  PHASE_2.1.md
.task/docs/: NEXT_PHASE_SPEC.md  REFAC_SPEC.md
api/: .env.example  Cargo.toml  Dockerfile  build.rs
api/.github/workflows/: ci.deploy.yml
api/docs/: CODING_PATTERNS.md
api/src/: config.rs  db.rs  main.rs  openapi.rs  state.rs  telemetry.rs
api/src/entities/: account_authorizations.rs  account_credentials.rs  account_emails.rs  account_profiles.rs  account_scopes.rs  accounts.rs  api_key_scopes.rs  api_keys.rs  email_tokens.rs  mod.rs  route_policies.rs  route_policy_scopes.rs  sessions.rs
api/src/handler/: accounts.rs  admin_accounts.rs  health.rs  internal_auth.rs  mod.rs  preferences.rs  public_auth.rs  self_service.rs  session.rs
api/src/handler/auth/: github.rs  mod.rs  password.rs
api/src/repo/: account_authorizations.rs  account_credentials.rs  account_emails.rs  account_profiles.rs  account_scopes.rs  accounts.rs  api_key_scopes.rs  api_keys.rs  email_tokens.rs  mod.rs  route_policies.rs  route_policy_scopes.rs  sessions.rs
api/src/schema/: account_authorizations.rs  account_credentials.rs  account_emails.rs  account_profiles.rs  account_scopes.rs  account_settings.rs  accounts.rs  api_key_scopes.rs  api_keys.rs  email_tokens.rs  mod.rs  route_policies.rs  route_policy_scopes.rs  sessions.rs
api/src/service/: access.rs  accounts.rs  api_tokens.rs  auth.rs  auth_actor.rs  auth_context.rs  config.rs  email.rs  email_auth.rs  mail_client.rs  mailer.rs  mod.rs  profile.rs  session.rs  verification.rs
api/tests/: smoke_api.rs  smoke_auth.rs
docs/: auth-foundation.md
e2e/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/specs/: smoke.spec.ts
mail/: Cargo.toml  Dockerfile  build.rs
mail/src/: config.rs  main.rs  proto.rs  provider.rs  server.rs  templates.rs
mail/templates/auth/login_link/: body.html.j2  body.txt  subject.txt
mail/templates/auth/verify_email/: body.html.j2  body.txt
proto/mail/v1/: mail.proto
scripts/: run-e2e.sh
web/: .dockerignore  .gitignore  Dockerfile  README.md  flow.html  health.html  index.html  logout.html  middleware.ts  next.config.mjs  notes.html  orval.config.ts  package.json  pnpm-lock.yaml  profile.html  showcase.html  svelte.config.js  tsconfig.json  vite.config.ts
web/.github/workflows/: ci.deploy.yml
web/app/: health-client.tsx  page.tsx
web/app/api/health/: route.ts
web/docker/: nginx.conf
web/openapi/: client.ts  facade.ts  http.ts  index.ts
web/openapi/models/: health.ts  index.ts
web/scripts/: write-version.mjs
web/src/: App.svelte  app.css  app.html
web/src/lib/: config.ts  error.ts
web/src/lib/auth/: AuthPage.svelte
web/src/lib/i18n/: LanguageSwitcher.svelte  copy.ts  server.ts  shared.ts
web/src/lib/layout/: BrandLink.svelte  CenteredMutedText.svelte  DisplayTitle.svelte  MutedText.svelte  PageRoot.svelte  Panel.svelte  Stack.svelte
web/src/lib/preferences/: shared.ts
web/src/lib/server/: api.ts  auth-api.ts  auth.ts  cookies.ts  redirects.ts
web/src/pages/flow/: FlowPage.svelte  main.ts
web/src/pages/health/: HealthPage.svelte  main.ts
web/src/pages/logout/: LogoutPage.svelte  main.ts
web/src/pages/notes/: NotesPage.svelte  main.ts
web/src/pages/profile/: ProfilePage.svelte  main.ts
web/src/pages/showcase/: ShowcasePage.svelte  main.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/api/[...path]/: +server.ts
web/src/routes/api/v1/preferences/language/: +server.ts
web/src/routes/auth/login/email/complete/: +server.ts
web/src/routes/auth/verify/email/: +server.ts
web/src/routes/flow/: +page.server.ts  +page.svelte
web/src/routes/login/: +page.server.ts  +page.svelte
web/src/routes/logout/: +page.server.ts  +page.svelte
web/src/routes/profile/: +page.server.ts  +page.svelte
web/src/routes/register/: +page.server.ts  +page.svelte
