[package]
name = "service-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-health = "0.12"
minijinja = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
